crates/oxc_css_parser/tests/error/sass/semicolon.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `<linebreak>`, but found `;`
  ┌─ semicolon.sass:2:7
  │
2 │   b: c;
  │       ^


